--- a/AmmiFurnitures.Web/AmmiFurnitures.Web.csproj
+++ b/AmmiFurnitures.Web/AmmiFurnitures.Web.csproj
@@ -201,7 +201,9 @@
     <Content Include="images\img1.jpg" />
     <Content Include="images\img2.jpg" />
     <Content Include="images\img3.jpg" />
-    <Content Include="images\logo.png" />
+    <Content Include="images\logo.jpg" />
+    <Content Include="images\logo1.png" />
+    <Content Include="images\favicon.ico" />
     <Content Include="images\one.jpg" />
     <Content Include="images\two.jpg" />
     <Content Include="Models\AmmiFurnitureDb.Context.tt">
@@ -228,6 +230,7 @@
     <Content Include="Models\AmmiFurnitureDb.edmx.diagram">
       <DependentUpon>AmmiFurnitureDb.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\AmmiProfile.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
