--- a/AmmiFurnitures.Web/Web.config
+++ b/AmmiFurnitures.Web/Web.config
@@ -15,12 +15,20 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"/>
+    <trust level="Full"/>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
 	  <authentication mode="Forms">
 		  <forms loginUrl="Home/Index"/>
 	  </authentication>
   </system.web>
+	<system.webServer>
+
+		<httpErrors errorMode="Detailed" existingResponse="PassThrough"/>
+
+	</system.webServer>
+	
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -54,13 +62,10 @@
     </assemblyBinding>
   </runtime>
   <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-    </compilers>
   </system.codedom>
   <connectionStrings>
     <add name="AmmiFurnitureDbEntities" connectionString="metadata=res://*/Models.AmmiFurnitureDb.csdl|res://*/Models.AmmiFurnitureDb.ssdl|res://*/Models.AmmiFurnitureDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ASUSHASHI\MSQLSERVER;initial catalog=AmmiFurnitureDb;persist security info=True;user id=sa;password=sa1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="AmmiFurnitureDbEntities" connectionString="metadata=res://*/Models.AmmiFurnitureDb.csdl|res://*/Models.AmmiFurnitureDb.ssdl|res://*/Models.AmmiFurnitureDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=148.72.232.167;initial catalog=AmmiFurnitureDb;persist security info=True;user id=ph12910958961;password=Rinku@1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
